# ai-storywriter

api/: pyproject.toml
api/api/: main.py
app/: .env.example  package.json  pnpm-lock.yaml
app/src/routes/: +layout.svelte  +page.svelte  styles.css
app/src/routes/api/text-generation/: +server.ts
app/src/routes/api/text-to-text/: +server.ts
